# occt-rs

./: CLA.md  Cargo.toml  DEVELOPMENT.md  README.md  deny.toml  flake.nix
.github/workflows/: cla.yml
crates/occt-rs/: Cargo.toml
crates/occt-rs/src/: error.rs  gp.rs  lib.rs  tessellate.rs  topo.rs
crates/occt-rs/src/error/: common_error.rs  fuse_error.rs
crates/occt-rs/src/topo/: application.rs  attributes.rs  chamfer.rs  document.rs  edge.rs  face.rs  fillet.rs  label.rs  offset.rs  proximity_wire_builder.rs  shape.rs  shape_type.rs  sketch_polyline_builder.rs  solid.rs  tnaming.rs  vertex.rs  wire.rs  wire_builder.rs
crates/occt-sys/: Cargo.toml  build.rs
crates/occt-sys/include/: occt_sys.hxx
crates/occt-sys/include/occt_sys/: exception.hxx  gp.hxx  ocaf.hxx  topo.hxx
crates/occt-sys/include/occt_sys/ocaf/: application.hxx  attributes.hxx  document.hxx  label.hxx  tnaming.hxx
crates/occt-sys/include/occt_sys/topo/: bool_op.hxx  chamfer.hxx  edge.hxx  edge_polygon.hxx  explorer.hxx  face.hxx  fillet.hxx  mesh.hxx  offset.hxx  shape.hxx  solid.hxx  transform.hxx  vertex.hxx  wire.hxx
crates/occt-sys/src/: gp.rs  lib.rs  topo.rs
signatures/: cla.json
