[package]
name        = "occt-rs"
description = "Safe Rust API for OpenCASCADE Technology (OCCT)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
cxx = {workspace = true}
occt-sys = { path = "../occt-sys" }
