[package]
name = "occt-sys"
description = "ffi bridge for OpenCASCADE Technology (OCCT)"
version    = "0.0.1"
edition    = "2021"
license    = "AGPL-3.0-only"
repository = "https://github.com/occt-rs/occt-rs"
authors    = [ "Ben Pieters-Hawke" ]

# cxx generates both Rust and C++ code.  The C++ side is compiled by
# cxx-build in build.rs; the Rust side is provided by the cxx runtime crate.
[dependencies]
cxx        = "1.0.194"
 
[build-dependencies]
cxx-build  = "1.0.194"
pkg-config = "0.3.33"
